[workspace]
members = ["crates/*", "examples/*", "tests"]
exclude = []
resolver = "2"

[workspace.dependencies]
yellowstone-grpc-client = { version = "9" }
yellowstone-grpc-proto = { version = "9", default-features = false }
yellowstone-vixen = { path = "crates/runtime", version = "0.5.0" }
yellowstone-vixen-stream = { path = "crates/stream", version = "0.1.0" }
yellowstone-vixen-core = { path = "crates/core", version = "0.5.0" }
yellowstone-vixen-mock = { path = "crates/mock", version = "0.5.0" }
yellowstone-vixen-parser = { path = "crates/parser", version = "0.5.0" }
yellowstone-vixen-proto = { path = "crates/proto", version = "0.5.0" }

yellowstone-vixen-boop-parser = { path = "crates/boop-parser", version = "0.5.0" }
yellowstone-vixen-meteora-parser = { path = "crates/meteora-parser", version = "0.5.0" }
yellowstone-vixen-pumpfun-parser = { path = "crates/pumpfun-parser", version = "0.5.0" }
yellowstone-vixen-jupiter-swap-parser = { path = "crates/jupiter-swap-parser", version = "0.5.0" }
yellowstone-vixen-meteora-amm-parser = { path = "crates/meteora-amm-parser", version = "0.5.0" }
yellowstone-vixen-meteora-dbc-parser = { path = "crates/meteora-dbc-parser", version = "0.5.0" }
yellowstone-vixen-meteora-pools-parser = { path = "crates/meteora-pools-parser", version = "0.5.0" }
yellowstone-vixen-meteora-vault-parser = { path = "crates/meteora-vault-parser", version = "0.5.0" }
yellowstone-vixen-moonshot-parser = { path = "crates/moonshot-parser", version = "0.5.0" }
yellowstone-vixen-orca-whirlpool-parser = { path = "crates/orca-whirlpool-parser", version = "0.5.0" }
yellowstone-vixen-raydium-cpmm-parser = { path = "crates/raydium-cpmm-parser", version = "0.5.0" }
yellowstone-vixen-pump-swaps-parser = { path = "crates/pump-swaps-parser", version = "0.5.0" }
yellowstone-vixen-raydium-clmm-parser = { path = "crates/raydium-clmm-parser", version = "0.5.0" }
yellowstone-vixen-raydium-amm-v4-parser = { path = "crates/raydium-amm-v4-parser", version = "0.5.0" }
yellowstone-vixen-kamino-limit-orders-parser = { path = "crates/kamino-limit-orders-parser", version = "0.5.0" }
yellowstone-vixen-raydium-launchpad-parser = { path = "crates/raydium-launchpad-parser", version = "0.5.0" }
yellowstone-vixen-virtuals-parser = { path = "crates/virtuals-parser", version = "0.5.0" }
kryptogo-vixen-okx-dex-parser = { path = "crates/kryptogo-vixen-okx-dex-parser", version = "0.1.0" }
yellowstone-vixen-pancake-parser = { path = "crates/pancake-parser", version = "0.3.0" }

# Sources
yellowstone-vixen-solana-rpc-source = { path = "crates/solana-rpc-source", version = "0.3.0" }
yellowstone-vixen-yellowstone-grpc-source = { path = "crates/yellowstone-grpc-source", version = "0.3.0" }
yellowstone-vixen-yellowstone-fumarole-source = { path = "crates/yellowstone-fumarole-source", version = "0.3.0" }
yellowstone-vixen-solana-snapshot-source = { path = "crates/solana-snapshot-source", version = "0.3.0" }
