[workspace]
members = ["crates/*", "examples/*", "tests/*"]
exclude = ["examples/multi-dex-stream"]
resolver = "2"

[workspace.package]
authors = ["Triton One", "ABK-Labs"]
edition = "2024"
license = "MIT"
version = "0.7.0-alpha.0"
repository = "https://github.com/rpcpool/yellowstone-vixen"
publish = false

[workspace.dependencies]
agave-snapshots = "^3.0.0"
async-trait = "^0.1"
borsh = "1.5.7"
bs58 = "^0.5.1"
hex = "^0.4.3"
bytesize = "^2.0.0"
base64 = "^0.22.1"
clap = "^4.5.4"
codama-nodes = "^0.6"
futures = "^0.3.31"
futures-channel = "^0.3.31"
futures-util = "^0.3.31"
num-derive = "^0.4.0"
num-traits = "^0.2.0"
opentelemetry = "^0.24.0"
pin-project-lite = "^0.2.0"
prettyplease = "^0.2"
proc-macro2 = "^1"
prometheus = "^0.14.0"
prost = "^0.14.0"
prost-types = "^0.14.0"
protobuf-src = "^1.0.0"
regex = "^1.11.0"
serde = "^1.0.198"
serde_json = "^1.0.0"
smallvec = "^1.14.0"
solana-genesis-utils = "^3.0.0"
solana-account = "^3.0.0"
solana-accounts-db = "^3.0.0"
solana-program-option = "^3.0.0"
solana-account-decoder-client-types = "^3.0.0"
solana-client = "^3.0.0"
solana-commitment-config = "^3.0.0"
solana-sdk = "^3.0.0"
solana-rpc-client-api = "^3.0.0"
solana-account-info = "^3.0.0"
solana-cpi = "^3.0.0"
solana-decode-error = "^3.0.0"
solana-pubkey = { version = "^3.0.0", features = ["serde"] }
solana-hash = { version = "^3.0.0", features = ["serde"] }
solana-instruction = "^3.0.0"
solana-msg = "^3.0.0"
solana-message = "^3.0.0"
solana-program-entrypoint = "^3.0.0"
solana-program-pack = "^3.0.0"
solana-program-error = "^3.0.0"
solana-transaction = "^3.0.0"
solana-transaction-status = "^3.0.0"
solana-ledger = "^3.0.0"
solana-runtime = "^3.0.0"
solana-clock = "^3.0.0"
spl-pod = "^0.7.0"
spl-stake-pool = "^2.0.0"
spl-token = "^9.0.0"
spl-token-2022 = "^10.0.0"
spl-type-length-value = "^0.9.0"
spl-token-group-interface = "^0.7.0"
spl-token-metadata-interface = "^0.8.0"
rustls = "^0.23"
strum = "^0.27"
strum_macros = "^0.27"
syn = { version = "2", default-features = false }
tar = "^0.4.0"
tempfile = "^3.5.0"
thiserror = "^1.0.64"
tonic = "^0.14.0"
tonic-reflection = "^0.14.0"
tonic-prost = "^0.14.0"
tonic-prost-build = "^0.14.0"
toml = "^0.8.0"
topograph = "^0.4.0"
tokio = "^1.48.0"
tracing = "^0.1.40"
quote = "1"
zstd = "^0.13.0"
bytemuck = "^1"
tokio-util = "0.7"
jetstreamer-firehose = "0.2"
jetstreamer-utils = "0.2"
warp = "0.3"

yellowstone-block-machine = { git = "https://github.com/rpcpool/yellowstone-block-machine", rev = "51b5c294d920bbf37ea6e8dbaddcbe0d2f4cd948", features = [
    "dragonsmouth-thin",
] }
yellowstone-fumarole-client = "0.3.1-rc1+solana.3"
yellowstone-grpc-client = { version = "11" }
yellowstone-grpc-proto = { version = "11", default-features = false }
rdkafka = { version = "0.36", features = ["cmake-build"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }

yellowstone-vixen = { path = "crates/runtime", version = "0.7.0-alpha.0" }
yellowstone-vixen-proc-macro = { path = "crates/proc-macro", version = "0.7.0-alpha.0" }
yellowstone-vixen-stream = { path = "crates/stream", version = "0.7.0-alpha.0" }
yellowstone-vixen-core = { path = "crates/core", version = "0.7.0-alpha.0" }
yellowstone-vixen-mock = { path = "crates/mock", version = "0.7.0-alpha.0" }
yellowstone-vixen-parser = { path = "crates/parser", version = "0.7.0-alpha.0" }
yellowstone-vixen-proto = { path = "crates/proto", version = "0.7.0-alpha.0" }

# Parsers
yellowstone-vixen-spl-token-extensions-parser = { path = "crates/spl-token-extensions-parser", version = "0.7.0-alpha.0" }
yellowstone-vixen-spl-token-parser = { path = "crates/spl-token-parser", version = "0.7.0-alpha.0" }
yellowstone-vixen-block-meta-parser = { path = "crates/block-meta-parser", version = "0.7.0-alpha.0" }
yellowstone-vixen-slot-parser = { path = "crates/slot-parser", version = "0.7.0-alpha.0" }

# Sources
yellowstone-vixen-solana-rpc-source = { path = "crates/solana-rpc-source", version = "0.7.0-alpha.0" }
yellowstone-vixen-yellowstone-grpc-source = { path = "crates/yellowstone-grpc-source", version = "0.7.0-alpha.0" }
yellowstone-vixen-yellowstone-fumarole-source = { path = "crates/yellowstone-fumarole-source", version = "0.7.0-alpha.0" }
yellowstone-vixen-solana-snapshot-source = { path = "crates/solana-snapshot-source", version = "0.7.0-alpha.0" }
yellowstone-vixen-jetstream-source = { path = "crates/jetstreamer-source", version = "0.7.0-alpha.0" }

# Coordinators
yellowstone-vixen-block-coordinator = { path = "crates/block-coordinator", version = "0.7.0-alpha.0" }

# Sinks
yellowstone-vixen-kafka-sink = { path = "crates/kafka-sink", version = "0.7.0-alpha.0" }
