[package]
name = "yellowstone-vixen-anchor-event"
description = "Composable Anchor event parser wrapper for yellowstone-vixen"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "./../../README.md"

[dependencies]
yellowstone-vixen-core = { workspace = true }
prost = { workspace = true, optional = true }
base64 = { workspace = true }

[features]
proto = ["yellowstone-vixen-core/proto", "dep:prost"]
