[package]
name = "yellowstone-vixen-block-meta-parser"
description = "Vixen block meta parser."
readme = "./../../README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yellowstone-grpc-proto = { workspace = true }
yellowstone-vixen-core = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }

[dev-dependencies]
yellowstone-vixen-mock = { workspace = true }
tokio.workspace = true

[features]
default = []
