[package]
name = "yellowstone-vixen-block-meta-parser"
description = "Vixen block meta parser."
readme = "./../../README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yellowstone-grpc-proto = { workspace = true }
yellowstone-vixen-core = { workspace = true }
yellowstone-vixen-proc-macro = { workspace = true }
prost = { workspace = true, optional = true }
prost-types = { workspace = true, optional = true }

[dev-dependencies]
yellowstone-vixen-mock = { workspace = true }
tokio.workspace = true

[features]
default = ["proto"]
proto = ["dep:prost", "dep:prost-types", "yellowstone-vixen-core/proto", "yellowstone-vixen-proc-macro/proto"]
