[package]
name = "yellowstone-vixen-bpf-loader-parser"
description = "Vixen program parsers for the BPF upgradeable loader program."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "./../../README.md"

[dependencies]
bincode = { workspace = true }
prost = { workspace = true, optional = true }
prost-types = { workspace = true, optional = true }
solana-loader-v3-interface = { workspace = true }
solana-sdk-ids = { workspace = true }
yellowstone-vixen-core = { workspace = true }
yellowstone-vixen-parser = { workspace = true }
yellowstone-vixen-proc-macro = { workspace = true }
yellowstone-vixen-proto = { workspace = true, features = [
  "parser",
], optional = true }
thiserror.workspace = true

[features]
default = ["proto"]
proto = [
  "dep:prost",
  "dep:prost-types",
  "dep:yellowstone-vixen-proto",
  "yellowstone-vixen-core/proto",
  "yellowstone-vixen-proc-macro/proto",
  "yellowstone-vixen-proto/parser",
  "yellowstone-vixen-parser/proto",
]
