[package]
name = "yellowstone-vixen-core"
description = "Core types for Vixen"
version = "0.5.0"
edition = "2021"
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "./../../README.md"

[dependencies]
bs58.workspace = true
thiserror.workspace = true
yellowstone-grpc-proto = { workspace = true }
yellowstone-vixen-proto = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
clap = { workspace = true, features = ["derive", "cargo", "wrap_help"] }

[features]
proto = ["dep:yellowstone-vixen-proto"]
