[package]
name = "yellowstone-vixen-core"
description = "Core types for Vixen"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "./../../README.md"

[dependencies]
bs58.workspace = true
thiserror.workspace = true
yellowstone-grpc-proto = { workspace = true }
yellowstone-vixen-proto = { workspace = true, optional = true }
borsh = { workspace = true }
serde = { workspace = true, features = ["derive"] }
clap = { workspace = true, features = ["derive", "cargo", "wrap_help"] }
prost = { workspace = true }
prost-types = { workspace = true }

[features]
proto = ["dep:yellowstone-vixen-proto"]
