[package]
name = "yellowstone-vixen-jetstream-source"
version = "0.3.1"
description = "Jetstream source for the Yellowstone Vixen"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "./../../README.md"

[dependencies]
async-trait = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "signal"] }
tracing = { workspace = true }
futures-util = { workspace = true, features = ["sink"] }
yellowstone-vixen = { workspace = true }
yellowstone-vixen-core = { workspace = true }
yellowstone-grpc-proto = { workspace = true }
yellowstone-grpc-client = { workspace = true }
serde = { workspace = true, features = ["derive"] }
clap = { workspace = true, features = ["derive", "cargo", "wrap_help"] }
thiserror = { workspace = true }
tokio-util = { workspace = true }
prost-types = { workspace = true }
# Jetstreamer firehose for direct streaming without ClickHouse
jetstreamer-firehose = { workspace = true }
jetstreamer-utils = { workspace = true }
prometheus = { workspace = true, optional = true }
# Solana crates for transaction parsing
solana-transaction = { workspace = true }
solana-msg = { workspace = true }
solana-instruction = { workspace = true }
solana-pubkey = { workspace = true }
solana-transaction-status = { workspace = true }

[features]
default = []
prometheus = ["dep:prometheus"]
