[package]
name = "yellowstone-vixen-jetstream-source"
version.workspace = true
description = "Jetstream source for the Yellowstone Vixen"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "./../../README.md"

[dependencies]
async-trait = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "signal"] }
tracing = { workspace = true }
futures-util = { workspace = true, features = ["sink"] }
yellowstone-vixen = { workspace = true }
yellowstone-vixen-core = { workspace = true }
yellowstone-grpc-proto = { workspace = true }
yellowstone-grpc-client = { workspace = true }
serde = { workspace = true, features = ["derive"] }
clap = { workspace = true, features = ["derive", "cargo", "wrap_help"] }
thiserror = { workspace = true }
tokio-util = { workspace = true }
prost-types = { workspace = true }

jetstreamer-firehose = { workspace = true }
jetstreamer-utils = { workspace = true }
prometheus = { workspace = true, optional = true }

# Solana dependencies - aligned with workspace (3.x)
solana-transaction = { workspace = true }
solana-msg = { workspace = true }
solana-message = { workspace = true }
solana-instruction = { workspace = true }
solana-pubkey = { workspace = true }
solana-transaction-status = { workspace = true }
solana-runtime = { workspace = true }

bincode = "1.3"

[features]
default = []
prometheus = ["dep:prometheus"]
