[package]
name = "yellowstone-vixen-jupiter-dca-parser"
version = "0.3.0"
edition = "2021"
description = "Vixen program parser for Jupiter DCA"
license = "MIT"
repository = "https://github.com/rpcpool/yellowstone-vixen"


[dependencies]
prost = "0.13.1"
yellowstone-vixen-core = { workspace = true, features = ["proto"] }
tonic = { version = "0.12.1", features = ["gzip", "zstd"] }
solana-program = "^2.1.6"
borsh = "^0.10"
num-derive = "0.4"
thiserror = "1.0.64"
num-traits = "^0.2"
tracing = { version = "0.1.40", optional = true }
strum = { version = "0.24", optional = true }
strum_macros = { version = "0.24", optional = true }


[features]
anchor = []
anchor-idl-build = []
serde = []
test-sbf = []
fetch = []
tracing = ["dep:tracing", "dep:strum", "dep:strum_macros"]


[build-dependencies]
prost-build = "0.13.1"