

[package]
name = "yellowstone-vixen-meteora-parser"
version = "0.3.0"
description = "Vixen program parser for Meteora"
license = "MIT"
repository = "https://github.com/rpcpool/yellowstone-vixen"
edition = "2021"


[dependencies]
prost = "0.13.1"
yellowstone-vixen-core = { workspace = true, features = ["proto"] }
tonic = { version = "0.12.1", features = ["gzip", "zstd"] }
solana-program = "^2.1.6"
borsh = "^0.10"
num-derive = "0.4"
thiserror = "1.0.64"
num-traits = "^0.2"


[features]
anchor = []
anchor-idl-build = []
serde = []
test-sbf = []
fetch = []


[build-dependencies]
prost-build = "0.13.1"

# [features]
# proto = ["dep:tonic"]
