[package]
name = "yellowstone-vixen-mock"
description = "Mock implementation of the Vixen Parsers for testing."
version = "0.3.0"
repository = "https://github.com/rpcpool/yellowstone-vixen"
edition = "2021"
license = "MIT"
readme = "./README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yellowstone-grpc-proto = { workspace = true }
solana-client = "2.0.3"
solana-sdk = "2.0.3"
solana-rpc-client-api = "2.0.3"
yellowstone-vixen-core = { workspace = true }
serde = "1.0.204"
serde_json = "1.0.121"
regex = "1.10.6"
solana-transaction-status = "2.0.6"
futures = "0.3.31"
