[package]
name = "yellowstone-vixen-mock"
description = "Mock implementation of the Vixen Parsers for testing."
version = "0.5.0"
repository = "https://github.com/rpcpool/yellowstone-vixen"
edition = "2021"
license = "MIT"
readme = "./README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yellowstone-grpc-proto = { workspace = true }
solana-client.workspace = true
solana-sdk.workspace = true
solana-rpc-client-api.workspace = true
yellowstone-vixen-core = { workspace = true }
serde.workspace = true
serde_json.workspace = true
regex.workspace = true
solana-transaction-status.workspace = true
futures.workspace = true
