[package]
name = "yellowstone-vixen-mock"
description = "Mock implementation of the Vixen Parsers for testing."
version.workspace = true
edition.workspace = true
readme = "./README.md"
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
yellowstone-grpc-proto = { workspace = true }
solana-client.workspace = true
solana-sdk.workspace = true
solana-rpc-client-api.workspace = true
yellowstone-vixen-core = { workspace = true }
serde.workspace = true
serde_json.workspace = true
regex.workspace = true
solana-transaction-status.workspace = true
futures.workspace = true
