[package]
name = "yellowstone-vixen-openbook-v2-parser"
version = "0.1.0"
edition = "2021"

[dependencies]
anchor-lang = { version = "0.30.0", optional = true }
borsh = "1.5.1"
kaigan = "0.2.5"
num-derive = "0.4"
num-traits = "^0.2"
serde = { version = "1.0.198", features = ["derive"], optional = true  }
serde_with = { version = "^3.0", optional = true }
solana-program = "^2.1.6"
solana-client = { version = "2.0.3", optional = true }
solana-sdk = { version = "2.0.3", optional = true }
thiserror = "1.0.64"
yellowstone-vixen-core = { workspace = true }

[features]
anchor = ["dep:anchor-lang"]
anchor-idl-build = ["anchor", "anchor-lang?/idl-build"]
serde = ["dep:serde", "dep:serde_with"]
test-sbf = []
fetch = ["dep:solana-client", "dep:solana-sdk"]