[package]
name = "yellowstone-vixen-parser"
description = "Vixen program parsers for the solana program library."
version = "0.5.0"
edition = "2021"
license.workspace = true
repository.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# TODO: find a way to put all SPL to workspace.
spl-pod = { version = "0.3.0" }
spl-token = { version = "6.0.0", optional = true }
spl-token-2022 = { version = "4.0.0", optional = true }
spl-type-length-value = { version = "0.5.0", optional = true }
spl-token-group-interface = { version = "0.3.0", optional = true }
spl-token-metadata-interface = { version = "0.4.0", optional = true }
yellowstone-grpc-proto = { workspace = true }
yellowstone-vixen-core = { workspace = true }
yellowstone-vixen-proto = { workspace = true, features = [
  "parser",
], optional = true }
thiserror.workspace = true
borsh.workspace = true
bs58.workspace = true
tracing = { workspace = true, optional = true }
strum = { workspace = true, optional = true }
strum_macros = { workspace = true, optional = true }

[dev-dependencies]
yellowstone-vixen-mock = { workspace = true }
tokio.workspace = true

[features]
default = []
block-meta = []
slot = []
proto = [
  "dep:yellowstone-vixen-proto",
  "yellowstone-vixen-core/proto",
  "yellowstone-vixen-proto/parser",
]
token-extensions = [
  "dep:spl-token-2022",
  "dep:spl-type-length-value",
  "dep:spl-token-group-interface",
  "dep:spl-token-metadata-interface",
  "token-program",
]
token-program = ["dep:spl-token"]
tracing = ["dep:tracing", "dep:strum", "dep:strum_macros"]
