[package]
name = "yellowstone-vixen-parser"
description = "Vixen program parsers for the solana program library."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spl-pod = { workspace = true }
spl-token = { workspace = true, optional = true }
spl-token-2022 = { workspace = true, optional = true }
spl-type-length-value = { workspace = true, optional = true }
spl-token-group-interface = { workspace = true, optional = true }
spl-token-metadata-interface = { workspace = true, optional = true }
solana-program-error = { workspace = true }
yellowstone-grpc-proto = { workspace = true }
yellowstone-vixen-core = { workspace = true }
yellowstone-vixen-proto = { workspace = true, features = [
  "parser",
], optional = true }
thiserror.workspace = true
bs58.workspace = true
tracing = { workspace = true, optional = true }
solana-pubkey = { workspace = true }
strum = { workspace = true, optional = true }
strum_macros = { workspace = true, optional = true }
bytemuck = { workspace = true, optional = true }

[dev-dependencies]
yellowstone-vixen-mock = { workspace = true }
tokio.workspace = true

[features]
default = []
block-meta = []
slot = []
proto = [
  "dep:yellowstone-vixen-proto",
  "yellowstone-vixen-core/proto",
  "yellowstone-vixen-proto/parser",
]
token-extensions = [
  "dep:spl-token-2022",
  "dep:spl-type-length-value",
  "dep:spl-token-group-interface",
  "dep:spl-token-metadata-interface",
  "dep:bytemuck",
  "token-program",
]
token-program = ["dep:spl-token"]
tracing = ["dep:tracing", "dep:strum", "dep:strum_macros"]
