[package]
name = "yellowstone-vixen-parser"
description = "Vixen program parser utilties."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yellowstone-vixen-core = { workspace = true }
solana-program-option = { workspace = true, optional = true }
solana-pubkey = { workspace = true }
thiserror.workspace = true
bs58.workspace = true

[dev-dependencies]
yellowstone-vixen-mock = { workspace = true }
tokio.workspace = true

[features]
default = []
