[package]
name = "yellowstone-vixen-proc-macro"
description = "Generate a Vixen parser from Codama IDL"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "./README.md"

[lib]
proc-macro = true

[dependencies]
yellowstone-vixen-core = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = [
  "full",
  "parsing",
], default-features = false }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
codama-nodes = { workspace = true }
hex = { workspace = true }
bs58 = { workspace = true }
base64 = { workspace = true }

[features]
proto = []

[dev-dependencies]
prettyplease = { workspace = true }
