[package]
name = "yellowstone-vixen-proto"
description = "Protobuf definitions for Vixen"
# authors = ["TODO"]
version = "0.5.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/rpcpool/yellowstone-vixen"

[dependencies]
prost.workspace = true
prost-types = { workspace = true, optional = true }
tonic = { workspace = true, optional = true, features = ["gzip", "zstd"] }
tonic-reflection = { workspace = true, optional = true }

[build-dependencies]
protobuf-src = { workspace = true, optional = true }
prost-build = { workspace = true, optional = true }
tonic-build = { workspace = true, optional = true }

[features]
parser = ["dep:prost-build", "dep:protobuf-src"]
stream = [
  "dep:prost-types",
  "dep:tonic",
  "dep:tonic-build",
  "dep:tonic-reflection",
  "dep:protobuf-src",
]
