[package]
name = "yellowstone-vixen-proto"
edition = "2021"
description = "Protobuf definitions for Vixen"
version = "0.5.1"
license.workspace = true
repository.workspace = true
authors.workspace = true


[dependencies]
prost.workspace = true
prost-types = { workspace = true, optional = true }
tonic = { workspace = true, optional = true, features = ["gzip", "zstd"] }
tonic-reflection = { workspace = true, optional = true }

[build-dependencies]
protobuf-src = { workspace = true, optional = true }
prost-build = { workspace = true, optional = true }
tonic-build = { workspace = true, optional = true }

[features]
parser = ["dep:prost-build", "dep:protobuf-src"]
stream = [
  "dep:prost-types",
  "dep:tonic",
  "dep:tonic-build",
  "dep:tonic-reflection",
  "dep:protobuf-src",
]
