[package]
name = "yellowstone-vixen-proto"
edition.workspace = true
description = "Protobuf definitions for Vixen"
version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true


[dependencies]
prost.workspace = true
prost-types = { workspace = true, optional = true }
tonic = { workspace = true, optional = true, features = ["gzip", "zstd"] }
tonic-prost = { workspace = true, optional = true }
tonic-reflection = { workspace = true, optional = true }

[build-dependencies]
protobuf-src = { workspace = true, optional = true }
tonic-prost-build = { workspace = true, optional = true }
tonic-build = { workspace = true, optional = true }
tonic-prost = { workspace = true, optional = true }

[features]
stream = [
  "dep:prost-types",
  "dep:tonic",
  "dep:tonic-build",
  "dep:tonic-prost",
  "dep:tonic-reflection",
  "dep:tonic-prost-build",
  "dep:protobuf-src",
]
