[package]
name = "yellowstone-vixen-pump-swaps-parser"
version = "0.5.2"
edition.workspace = true
description = "Vixen program parser for Pump Swaps program"
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
prost.workspace = true
yellowstone-vixen-core = { workspace = true, features = ["proto"] }
tonic = { workspace = true, features = ["gzip", "zstd"] }
solana-account-info.workspace = true
solana-cpi.workspace = true
solana-decode-error.workspace = true
solana-pubkey = { workspace = true, features = ["curve25519", "borsh"] }
solana-instruction.workspace = true
solana-msg.workspace = true
solana-program-entrypoint.workspace = true
solana-program-error.workspace = true
borsh.workspace = true
num-derive.workspace = true
thiserror.workspace = true
num-traits.workspace = true
tracing = { workspace = true, optional = true }
strum = { workspace = true, optional = true }
strum_macros = { workspace = true, optional = true }

[features]
anchor = []
anchor-idl-build = []
serde = []
test-sbf = []
fetch = []
tracing = ["dep:tracing", "dep:strum", "dep:strum_macros"]
# Exposes shared transaction data like tx signature, slot and more, to be available in Vixen Handlers
shared-data = []

[build-dependencies]
prost-build.workspace = true
protobuf-src.workspace = true